1999-10-30  Olivier Chapuis  olivier.chapuis@free.fr

	* modules/FvwmForm/FvwmRootCursor.:
	* modules/FvwmForm/FvwmRootCursor.pl:
	Replace xsetroot by CursorStyle ROOT.

1999-10-26  Brad Giaccio

	* FvwmIconMan/*.c: New config option *NoIconAction

1999-10-26  Michael Han

	* FvwmIconMan/*.c: FvwmIconam can use an alias. New resolutions: !desk, !page

1999-10-25  Hippo

	* FvwmHeme/FvwmTheme.c: Removed color leaks when changing pixmap or
	gradient.  bg and fg default to average and contrast.

1999-10-24  Dan Espen  <dane@mk.telcordia.com>

	* FvwmForm/ReadXServer.c (ReadXServer): Fix problem caused by the usage
	of XDrawString when typing more characters than an input field can
	hold.

1999-10-24  Chris Rankin

	* FvwmSaveDesk, FvwmSave, FvwmDebug, FvwmIdent: removed duplicate
	prototypes
	* FvwmIconMan: some Wall fixes; also put "const" in a few places

1999-10-22  Douglas Straub

	* FvwmDragWell/*: new module

1999-10-22  Olivier Chapuis

	* FvwmWinlist/FvwmWinlist.c: Fixed wandering when remapping window,
	Only animates when window is mapped.
	* FvwmWinList/List.c: Fixed animation to wrong place.

1999-10-21  Dan Espen  <dane@mk.telcordia.com>

	* FvwmForm/FvwmForm.1: Correct the identification of the architecture
	independent data directory.  It should have been [PREFIX/etc/fvwm].

1999-10-20  Hippo

	* modules/*/*.c: replaced Colorset[x % nColorsets] with
	Colorset[x] and made sure AllocColorset(x) is called before
	reference.
	* modules/*/*: moved saferealloc into libfvwm.a
	* FvwmTheme/FvwmTheme.c: has a simpler version of AllocColorset

1999-10-18 Olivier Chapuis <olivier.chapuis@free.fr>

	* FvwmWinList.c (main): Fix a problem if we start WinList with
	ModuleSynchronous.

1999-10-17  Dan Espen  <dane@mk.telcordia.com>

	* modules/FvwmBanner: Moved 2 xpm files into the icon distribution.
	The only one remaining is the one built into FvwmBanner.

1999-10-15  Hippo

	* FvwmTheme/FvwmTheme.c: fixed color corruption. colorsets default to
	black on gray.
